k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    metadata:
      name: backend
      labels:
        app: backend-app
        web: nti
    spec:
      containers:
        - name: backend-container
          image: abdelrhman1ragab2/backend:2
          ports:
            - containerPort: 3000
    

  replicas: 1
  selector:
    matchLabels:
      app: backend-app
      web: nti
