k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      name: frontend
      labels:
        app: frontend-app
        web: nti
    spec:
      containers:
        - name: frontend-container
          image: abdelrhman1ragab2/frontend:7
          ports:
            - containerPort: 80
          
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
      web: nti
