k8s/postgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
        web: nti
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
  
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      web: nti
