k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector: 
    app: backend-app
    web: nti
