k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30030
  selector: 
    app: frontend-app
    web: nti
