k8s/postgress_serves.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgress-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector: 
    app: postgres
    web: nti
