k8s/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: frontend-app
      web: nti
  ingress:
  - from:
    - podSelector:
        app: backend-app
        web: nti
    ports:
    - protocol: TCP
      port: 3000  
  egress:  
  - {}
